# bevyfs

./: .rustfmt.toml  Cargo.toml  README.md
assets/: README.md  test002.txt
assets/test/textures/: CREDIT.txt
src/: datastruct.rs  err.rs  lib.rs  main.rs  pakcp.rs
