[package]
name = "bevyfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13.2", default-features = false, features = [
    "bevy_asset",
] }
# bevy = "0.13"
bincode = "1.3.3"
crc32fast = "1.4.0"
serde = { version = "1.0.198", features = ["derive"] }
walkdir = "2.5.0"
zstd = "0.13.1"
